# autopenkit

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: prompts.yaml  settings.yaml
src/autopenkit/: ai_analysis.py  merger.py  models.py  normalizer.py  recon.py  reporter.py  scanner.py  utils.py  validator.py
templates/: report.html.j2  report.md.j2
tests/: test_ai_analysis.py  test_merger.py  test_normalizer.py  test_scanner.py
