[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autopenkit"
version = "0.1.0"
description = "Python CLI-based automated pentesting framework with AI-assisted analysis."
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
